Version next

Version 2012.07.08.17
* Updated translations for: de, hu, tr

Version 2012.05.05.00b
* Fix alignment issues with the new identity box in Firefox 14+.
* Fix content pop-up fade in/out effects when displaying links.

Version 2012.04.21.13
* Updated translations for: fr

Version 2012.02.28.00b
* Re-write status pop-up binding to support Firefox 12+.
* Tear down S4E bindings on window destruction (some users have reported performance issues when opening and closing many windows).
* Un-highlight the domain when showing a link or status text in the location bar.
* Properly reset the download button when entering and exiting private browsing mode.

Version 2012.01.14.17
* Fix the mock location bar in the preference window.
* Updated translations for: de, sr, tr

Version 2011.12.29.14b
* Fix location bar margins on Windows in Firefox 9.
* Add an icon to the "Add-on bar" preference tab.
* Add advanced pref to try an override the location bar binding. Defaults to off.
* Added translations for: tr (partial)
* Updated translations for: el, eo, es-ES, he, ja-JP, ro, sr, sv-SE
* Rename dsb-DE to dsb
* Rename hsb-DE to hsb

Version 2011.11.13.22
* [Firefox <= 10] When customizing the toolbar, use the Status Bar styling from Firefox 11 (see Bug 616016 (https://bugzilla.mozilla.org/show_bug.cgi?id=616016)).

Version 2011.11.13.17
* Bump max version to 11.0a1
* Update locales for new strings.
* Updated translations for: nb-NO, nl

Version 2011.10.16.16b
* Fix status pop-up in Firefox 10.
* Add option to set the default side of the status pop-up.
* Fix-up licensing issues.
* Split up the overlay.xml so that proper license headers can be used.
* Added translations for: dsb-DE
* Updated translations for: hsb-DE, zh-TW

Version 2011.07.20.21
* Fix to prevent PluralForm utility from going AWOL.

Version 2011.07.20.20
* Prevent XPCOM interface (nsIDOMWindow) ID changes from breaking S4E.
* Fix bug when showing min download progress.
* Update locales for new strings.