@@ -45,5 +45,5 @@ homepageURL=http://forums.mozillazine.org/viewtopic.php?f=48&t=2001965
 
 defaultLocale=en-US
 
-Firefox=4.0|18.0a1
+Firefox=10.0|18.0a1
 
